2011-02-14  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-inhibit-logging): New variable.
	(nnimap-log-command): Don't log login commands.

	* auth-source.el (auth-source-netrc-search): The asserts seem to want
	to have more parameters.

	* nnimap.el (nnimap-send-command): Mark the command time for each
	command, so that we don't get NOOPs stepping on our toes.

	* gnus-art.el (article-date-ut): Get the date from the Date header on
	`t'.

2011-02-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el (auth-source-search): Use copy-sequence instead of
	the cl.el copy-list.

2011-02-13  Adam Sjøgren  <asjo@koldfront.dk>

	* gnus-delay.el (gnus-delay-article) Fix number of seconds per day.
	Improve prompt.

2011-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-mode-line-format): Remove the article
	washing status from the default format.  It isn't very informative.

2011-02-13  Tassilo Horn  <tassilo@member.fsf.org>  (tiny change)

	* nnimap.el (nnimap-request-accept-article, nnimap-process-quirk): Fix
	Gcc processing on imap.

2011-02-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-bury): Don't pop up a new window when selected
	window is dedicated.

2011-02-10  Antoine Levitt  <antoine.levitt@gmail.com>  (tiny change)

	* gnus-sum.el (gnus-summary-save-parts): Use read-directory-name.

2011-02-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* sieve-manage.el: Autoload `auth-source-search'.
	(sieve-sasl-auth): Use it.

2011-02-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnimap.el: Autoload `auth-source-forget+'.
	(nnimap-open-connection-1): Use it if the connection fails.

	* auth-source.el: Require `password-cache'.
	(auth-source-hide-passwords, auth-source-cache): Remove and mark
	obsolete.
	(auth-source-magic): Marker for `password-cache' keys.
	(auth-source-do-cache): Update docstring.
	(auth-source-search): Use and check cache.
	(auth-source-forget-all-cached, auth-source-remember)